--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap'); 
+
+:root{
+  --white: #fff;
+  --black0: #212529;
+  --orange0: #fda95b;
+}
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Orbitron', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
