--- a/src/views/container/components/Products/components/Product/styles.module.css
+++ b/src/views/container/components/Products/components/Product/styles.module.css
@@ -1,5 +1,5 @@
 .eachProductList{
-    background-color: #f8f9fa;
+    background-color: var(--white);
     flex: 2;
     margin: 0;
     min-width: 10.5rem;
